--- a/_sass/imports/_header.scss
+++ b/_sass/imports/_header.scss
@@ -48,7 +48,7 @@
 }
 
 .navbar {
-  padding: 1.5rem 0 1.5rem 0;
+  padding: 1.5rem 0;
   -ms-flex-align: center;
   align-items: center;
   display: -ms-flexbox;
