--- a/_sass/imports/_header.scss
+++ b/_sass/imports/_header.scss
@@ -26,7 +26,7 @@
     float: right;
     margin: 30px 10px 0 0;
     color: #222;
-    font-family: cursive;
+    font-family: font-family: 'Chicle', cursive;;
     font-weight: bold;
     font-size: 20px;
 }
