--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -28,7 +28,7 @@
         {% endfor %}
         {% assign font = site.data.config.base_font | default: 'fraunces' %}
         {% if font != 'system-sans' %}
-        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         {% endif %}
         {% if font == 'fraunces' %}
         <link href="https://fonts.googleapis.com/css2?family=Fraunces:ital,wght@0,400;0,500;1,400;1,500&display=swap" rel="stylesheet">
