_header.scss: changed

--- a/_sass/imports/_header.scss
+++ b/_sass/imports/_header.scss
@@ -24,7 +24,7 @@
     width: 232px;
     height: 24px;
     float: right;
-    margin: 30px 10px 0 0;
+    margin: 30px ;
     color: #222;
     font-family: 'Chicle', cursive;
     font-size: 26px;
