--- a/_sass/imports/_header.scss
+++ b/_sass/imports/_header.scss
@@ -121,7 +121,7 @@
     border-bottom: 1px solid;
 
     &__item {
-      font-size: 16px;
+      font-size: .8rem;
       text-transform: uppercase;
       color: #555;
       line-height: 1.2;
