--- a/_sass/imports/_header.scss
+++ b/_sass/imports/_header.scss
@@ -125,7 +125,7 @@
       text-transform: uppercase;
       color: #555;
       line-height: 1.2;
-      margin-left: 1.5em;
+          margin: 0 .75em;
     }
 
     .button--primary {
