_header.scss: changed

--- a/_sass/imports/_header.scss
+++ b/_sass/imports/_header.scss
@@ -102,7 +102,7 @@
 
 @media only screen and (min-width: 768px) {
   .navbar {
-    padding-left: 3vw;
+    padding-left: 3rem;
 
     &__toggle {
       display: none;
