--- a/_sass/imports/_portfolio-feed.scss
+++ b/_sass/imports/_portfolio-feed.scss
@@ -43,7 +43,7 @@
     img {
       height: 100%;
       left: 0;
-      -o-object-fit: cover;
+      -o-object-fit: contain;
       object-fit: contain;
       position: absolute;
       top: 0;
