_footer.scss: changed

--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -2,7 +2,7 @@
   padding-bottom: 1.33333em;
   padding-top: 2.5em;
   background: #ed9700;
-  position: fixed;
+  position: absolute;
   bottom: 0;
   width: 100vw;
   left: 0;
