_footer.scss: changed

--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -1,6 +1,7 @@
 .site-footer {
   padding-bottom: 1.33333em;
   padding-top: 2.5em;
+  margin-top: 4rem;
   background: #ed9700;
   position: absolute;
   bottom: 0;
