--- a/_sass/imports/_structure.scss
+++ b/_sass/imports/_structure.scss
@@ -35,5 +35,6 @@
 @media only screen and (min-width: 768px) {
     .site-content {
         padding: 0 3rem;
+        margin-bottom: 4rem;
     }
 }
