base.html: changed

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -47,6 +47,8 @@
     <body class="font-{{ site.data.config.base_font }} palette-{{ site.data.config.color_scheme }} accent-{{ site.data.config.accent_color }}">
         
         {{ content }}
+
+  {% include footer.html %}
         <script src="{{ 'js/init.js' | relative_url }}"></script>
         <script src="{{ 'js/page-load.js' | relative_url }}"></script>
     </body> 
