body.html: changed

--- a/_layouts/body.html
+++ b/_layouts/body.html
@@ -3,7 +3,7 @@ layout: base
 ---
 
 <div id="site-wrap" class="site">
-    <div id="">
+    <div id="main-wrap">
     {% include header.html %}
     <main id="content" class="site-content">
         {{ content }}
