--- a/_sass/imports/_structure.scss
+++ b/_sass/imports/_structure.scss
@@ -35,6 +35,10 @@
   max-width: $container-md;
 }
 
+#main-wrap {
+    
+}
+
 @media only screen and (min-width: 768px) {
     .site-content {
         padding: 0 3rem;
