_structure.scss: changed

--- a/_sass/imports/_structure.scss
+++ b/_sass/imports/_structure.scss
@@ -42,5 +42,6 @@
 @media only screen and (min-width: 768px) {
     .site-content {
         padding: 0 3rem;
+        padding-bottom: 3rem;
     }
 }
