--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -1,6 +1,5 @@
 .site-footer {
-  padding-bottom: 3.5rem;
-  padding-top: 2.5rem;
+  padding: 2.5rem;
   background: #ed9700;
   position: absolute;
   bottom: 0;
