_footer.scss: changed

--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -60,6 +60,7 @@
       align-items: flex-start;
       display: -ms-flexbox;
       display: flex;
+      margin: 0 1rem;
     }
 
     &__social {
