--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -60,7 +60,7 @@
       align-items: flex-start;
       display: -ms-flexbox;
       display: flex;
-      margin-left: 1rem;
+      margin: 1rem;
     }
 
     &__social {
