_footer.scss: changed

--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -60,7 +60,7 @@
       align-items: flex-start;
       display: -ms-flexbox;
       display: flex;
-      margin: 0 .5rem;
+      margin: 0 3vw;
     }
 
     &__social {
