--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -1,5 +1,5 @@
 .site-footer {
-  padding: 3rem 3rem 2.5rem 0;
+  padding: 3rem 3rem 2.5rem 3rem;
   background: #ed9700;
   position: absolute;
   bottom: 0;
