--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -52,6 +52,14 @@
     .icon {
       font-size: 18px;
     }
+
+    &__inside {
+      -ms-flex-align: start;
+      align-items: flex-start;
+      display: -ms-flexbox;
+      display: flex;
+      margin: 0 calc(3vw + 3rem);
+    }
   }
 
   @media only screen and (min-width: 601px) {
