--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -66,7 +66,7 @@
     &__info {
         .site-footer__copyright,
         > a {
-        margin: 0 10px 0.25em 0;
+        margin: 0;
         }
     }
     &__social {
