--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -28,6 +28,7 @@
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
     font-size: 15px;
+    color: #fff;
     line-height: 1.3;
     margin-bottom: 1.25em;
   }
