--- a/_sass/imports/_variations.scss
+++ b/_sass/imports/_variations.scss
@@ -84,7 +84,7 @@
 
   @media only screen and (min-width: 768px) {
     .project-card__header {
-      background-color: $accent-color;
+      background-color: $color-gray-800;
     }
   }
 
