--- a/_sass/imports/_portfolio-feed.scss
+++ b/_sass/imports/_portfolio-feed.scss
@@ -130,7 +130,7 @@
     }
 
     &__header {
-      background-color: #74c86c0;
+      background-color: #74c86c;
       box-sizing: border-box;
       bottom: 0;
       left: 0;
