_portfolio-feed.scss: changed

--- a/_sass/imports/_portfolio-feed.scss
+++ b/_sass/imports/_portfolio-feed.scss
@@ -14,7 +14,7 @@
     font-size: 1rem;
     margin: 0;
     color: #fff;
-    font-family: Chi;
+    font-family: Chicle, cursive;
 
     a {
       border: 0;
