_portfolio-feed.scss: changed

--- a/_sass/imports/_portfolio-feed.scss
+++ b/_sass/imports/_portfolio-feed.scss
@@ -16,6 +16,7 @@
     color: #fff;
     font-family: Chicle, cursive;
     letter-spacing: 1px;
+    font-weight: normal;
 
     a {
       border: 0;
