_portfolio-feed.scss: changed

--- a/_sass/imports/_portfolio-feed.scss
+++ b/_sass/imports/_portfolio-feed.scss
@@ -29,6 +29,9 @@
     font-size: 0.88889em;
     line-height: 1.5;
     margin-top: 0.3125em;
+    color: #fff;
+    font-family: Chicle, cursive;
+    letter-spacing: 1px;
   }
 
   &__image {
