_portfolio-feed.scss: changed

--- a/_sass/imports/_portfolio-feed.scss
+++ b/_sass/imports/_portfolio-feed.scss
@@ -38,6 +38,7 @@
     margin-bottom: 0.83333em;
     position: relative;
     width: 100%;
+        aspect-ratio: 1 / 0,7375;
 
     &:before {
       content: "";
