--- a/_sass/imports/_portfolio-feed.scss
+++ b/_sass/imports/_portfolio-feed.scss
@@ -119,7 +119,7 @@
 
           .project-card__image {
             &:before {
-              padding-top: calc(90% + 9px);
+              padding-top: calc(73.% + 9px);
             }
           }
         }
