--- a/_sass/imports/_portfolio-feed.scss
+++ b/_sass/imports/_portfolio-feed.scss
@@ -42,7 +42,7 @@
     &:before {
       content: "";
       display: block;
-      padding-top: 73.75%%;
+      padding-top: 73.75%;
     }
 
     img {
