--- a/_sass/imports/_portfolio-feed.scss
+++ b/_sass/imports/_portfolio-feed.scss
@@ -37,8 +37,7 @@
     display: block;
     margin-bottom: 0.83333em;
     position: relative;
-    width: 100%;
-    height: 100%;
+    aspect-ratio: 
 
     &:before {
       content: "";
