_portfolio-feed.scss: changed

--- a/_sass/imports/_portfolio-feed.scss
+++ b/_sass/imports/_portfolio-feed.scss
@@ -36,8 +36,8 @@
     border: 0;
     display: block;
     margin-bottom: 0.83333em;
-    position: relative;
-    aspect-ratio: 
+    position: relati7 0ve;
+    aspect-ratio: 1 
 
     &:before {
       content: "";
