--- a/_sass/imports/_portfolio-feed.scss
+++ b/_sass/imports/_portfolio-feed.scss
@@ -36,7 +36,7 @@
     border: 0;
     display: block;
     margin-bottom: 0.83333em;
-    position: relati7 0ve;
+    position: relative;
     aspect-ratio: 1 
 
     &:before {
