_portfolio-feed.scss: changed

--- a/_sass/imports/_portfolio-feed.scss
+++ b/_sass/imports/_portfolio-feed.scss
@@ -37,7 +37,7 @@
     display: block;
     margin-bottom: 0.83333em;
     position: relative;
-    aspect-ratio: 1 / .7375;
+    width: 
 
     &:before {
       content: "";
