_portfolio-feed.scss: changed

--- a/_sass/imports/_portfolio-feed.scss
+++ b/_sass/imports/_portfolio-feed.scss
@@ -37,7 +37,8 @@
     display: block;
     margin-bottom: 0.83333em;
     position: relative;
-    width: 
+    width: 240px;
+    height: 177px;
 
     &:before {
       content: "";
