--- a/_sass/imports/_portfolio-feed.scss
+++ b/_sass/imports/_portfolio-feed.scss
@@ -43,7 +43,7 @@
       content: "";
       display: block;
       width: 100%;
-      padding-top: (73.75)%;
+      padding-top: (177/24)%;
     }
 
     img {
