_portfolio-feed.scss: changed

--- a/_sass/imports/_portfolio-feed.scss
+++ b/_sass/imports/_portfolio-feed.scss
@@ -37,6 +37,7 @@
     display: block;
     margin-bottom: 0.83333em;
     position: relative;
+    width: 100%;
 
     &:before {
       content: "";
