_portfolio-feed.scss: changed

--- a/_sass/imports/_portfolio-feed.scss
+++ b/_sass/imports/_portfolio-feed.scss
@@ -37,12 +37,12 @@
     display: block;
     margin-bottom: 0.83333em;
     position: relative;
+    width: 100%;
 
     &:before {
       content: "";
       display: block;
-      width: 100%;
-      padding-top: (177 / 240) * 100%;
+      padding-top: 85%;
     }
 
     img {
@@ -50,7 +50,6 @@
       position: absolute;
       top: 0;
       right: 0;
-      bottom: 0;
     }
   }
 
