--- a/_sass/imports/_portfolio-feed.scss
+++ b/_sass/imports/_portfolio-feed.scss
@@ -119,7 +119,7 @@
 
           .project-card__image {
             &:before {
-              padding-top: 73.75%);
+              padding-top: 73.75%;
             }
           }
         }
