--- a/_sass/imports/_portfolio-feed.scss
+++ b/_sass/imports/_portfolio-feed.scss
@@ -42,7 +42,7 @@
     &:before {
       content: "";
       display: block;
-      padding-top: 73.75%;
+      padding-top: 85%;
     }
 
     img {
@@ -119,7 +119,7 @@
 
           .project-card__image {
             &:before {
-              padding-top: 73.75%;
+              padding-top: calc(90% + 9px);
             }
           }
         }
@@ -132,6 +132,7 @@
       margin: 0;
       -webkit-transition: .35s;
       transition: .35s;
+      aspect-ratio: 1 / 0.7375;
     }
 
     &__header {
