_structure.scss: changed

--- a/_sass/imports/_structure.scss
+++ b/_sass/imports/_structure.scss
@@ -21,6 +21,7 @@
 .container {
   padding-left: $container-padding;
   padding-right: $container-padding;
+      padding-bottom: 3rem;
 }
 
 .container--lg {
