_portfolio-feed.scss: changed

--- a/_sass/imports/_portfolio-feed.scss
+++ b/_sass/imports/_portfolio-feed.scss
@@ -38,6 +38,7 @@
     margin-bottom: 0.83333em;
     position: relative;
     width: 100%;
+    object-fit: contain;
 
     &:before {
       content: "";
