--- a/_sass/imports/_portfolio-feed.scss
+++ b/_sass/imports/_portfolio-feed.scss
@@ -113,6 +113,7 @@
         -ms-flex: 0 0 60%;
         flex: 0 0 60%;
         max-width: 60%;
+    object-fit: contain;
 
         &:nth-child(4n+2),
         &:nth-child(4n+3) {
