--- a/_sass/imports/_portfolio-feed.scss
+++ b/_sass/imports/_portfolio-feed.scss
@@ -50,7 +50,8 @@
       left: 0;
       position: absolute;
       top: 0;
-      width: 100%;object-fit: contain;
+      width: 100%;
+      object-fit: contain;
     }
   }
 
