_portfolio-feed.scss: changed

--- a/_sass/imports/_portfolio-feed.scss
+++ b/_sass/imports/_portfolio-feed.scss
@@ -1,5 +1,5 @@
 .project-card {
-  margin-bottom: 6rem;
+  margin-bottom: 1.66667em;
 
   &__link,
   &__view-all {
@@ -130,7 +130,7 @@
 
   .project-card {
     margin-bottom: 1.66667em;
-
+    
     &__image {
       margin: 0;
       -webkit-transition: .35s;
