--- a/_sass/imports/_portfolio-feed.scss
+++ b/_sass/imports/_portfolio-feed.scss
@@ -98,6 +98,8 @@
 
 @media only screen and (min-width: 768px) {
   .portfolio-feed {
+    margin-bottom: 0; 
+    
     &--tiles {
       .project-card {
         -ms-flex: 0 0 33%;
