--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,6 +6,10 @@
         {% if content_is_not_empty %}
         <span class="site-footer__copyright">{{ site.data.config.footer.content }}</span>
         {% endif %}
+        {% assign content_is_not_empty = site.data.config.footer.content | is_not_empty %}
+        {% if content_is_not_empty %}
+        <span class="site-footer__copyright">{{ site.data.config.footer.content }}</span>
+        {% endif %}
         {% for action in site.data.config.footer.links %}
           
           {% include action_link.html action=action %}
