--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
         {% if content_is_not_empty %}
         <span class="site-footer__copyright">{{ site.data.config.footer.content }}</span>
         {% endif %}
-        {% assign phone_is_not_empty = site.data.config.footer.content | is_not_empty %}
+        {% assign phone_is_not_empty = site.data.config.footer.phone | is_not_empty %}
         {% if content_is_not_empty %}
         <span class="site-footer__copyright">{{ site.data.config.footer.content }}</span>
         {% endif %}
