--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
         <span class="site-footer__copyright">{{ site.data.config.footer.content }}</span>
         {% endif %}
         {% assign phone_is_not_empty = site.data.config.footer.phone | is_not_empty %}
-        {% if content_is_not_empty %}
+        {% if phone_is_not_empty %}
         <span class="site-footer__copyright">{{ site.data.config.footer.content }}</span>
         {% endif %}
         {% for action in site.data.config.footer.links %}
