--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
         {% endif %}
         {% assign phone_is_not_empty = site.data.config.footer.phone | is_not_empty %}
         {% if phone_is_not_empty %}
-        <span class="site-footer__phone">{{ site.data.config.footer.content }}</span>
+        <span class="site-footer__phone">{{ site.data.config.footer.phone }}</span>
         {% endif %}
         {% for action in site.data.config.footer.links %}
           
