--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
       <div class="site-footer__info">
         {% assign content_is_not_empty = site.data.config.footer.content | is_not_empty %}
         {% if content_is_not_empty %}
-        <span class="site-footer__copyright">{{ site.data.config.footer.content }}</span>
+        <div class="site-footer__copyright">{{ site.data.config.footer.content }}</span>
         {% endif %}
         {% assign phone_is_not_empty = site.data.config.footer.phone | is_not_empty %}
         {% if phone_is_not_empty %}
