--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,6 +10,14 @@
         {% if phone_is_not_empty %}
         <div class="site-footer__phone">{{ site.data.config.footer.phone }}</div>
         {% endif %}
+        {% assign phone_is_not_empty = site.data.config.footer.phone | is_not_empty %}
+        {% if phone_is_not_empty %}
+        <div class="site-footer__phone">{{ site.data.config.footer.phone }}</div>
+        {% endif %}
+        {% assign phone_is_not_empty = site.data.config.footer.phone | is_not_empty %}
+        {% if phone_is_not_empty %}
+        <div class="site-footer__phone">{{ site.data.config.footer.phone }}</div>
+        {% endif %}
         {% for action in site.data.config.footer.links %}
           
           {% include action_link.html action=action %}
