--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
         <div class="site-footer__phone">{{ site.data.config.footer.phone }}</div>
         {% endif %}
         {% assign email_is_not_empty = site.data.config.footer.email | is_not_empty %}
-        {% if phone_is_not_empty %}
+        {% if email_is_not_empty %}
         <div class="site-footer__phone">{{ site.data.config.footer.phone }}</div>
         {% endif %}
         {% assign phone_is_not_empty = site.data.config.footer.phone | is_not_empty %}
