--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,7 @@
         {% endif %}
         {% assign email_is_not_empty = site.data.config.footer.email | is_not_empty %}
         {% if email_is_not_empty %}
-        <div class="site-footer__phone">{{ site.data.config.footer.phone }}</div>
+        <div class="site-footer__email">{{ site.data.config.footer.phone }}</div>
         {% endif %}
         {% assign phone_is_not_empty = site.data.config.footer.phone | is_not_empty %}
         {% if phone_is_not_empty %}
