footer.html: changed

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,7 +14,7 @@
         {% if email_is_not_empty %}
         <div class="site-footer__email">{{ site.data.config.footer.email }}</div>
         {% endif %}
-        {% assign phone_is_not_empty = site.data.config.footer.phone | is_not_empty %}
+        {% assign slogan_is_not_empty = site.data.config.footer.phone | is_not_empty %}
         {% if phone_is_not_empty %}
         <div class="site-footer__phone">{{ site.data.config.footer.phone }}</div>
         {% endif %}
