--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,7 +16,7 @@
         {% endif %}
         {% assign slogan_is_not_empty = site.data.config.footer.slogan | is_not_empty %}
         {% if slogan_is_not_empty %}
-        <div class="site-footer__phone">{{ site.data.config.footer.phone }}</div>
+        <div class="site-footer__slogan">{{ site.data.config.footer.phone }}</div>
         {% endif %}
         {% for action in site.data.config.footer.links %}
           
