--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -40,6 +40,13 @@
     }
   }
 
+  &__info {
+    .site-footer__copyright,
+    > a {
+      margin: 0 10px 0.25em 0;
+    }
+  }
+
   &__social {
     a {
       margin: 0 20px 0.25em 0;
