--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -41,10 +41,7 @@
   }
 
   &__info {
-    .site-footer__phone,
-    > a {
-      margin: 0 10px 0.25em 0;
-    }
+    .site-footer__phone 
   }
 
   &__social {
