_footer.scss: changed

--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -59,7 +59,7 @@
       -ms-flex-align: start;
       align-items: flex-start;
       display: -ms-flexbox;
-      display: flex;
+      display: grid;
       margin: 0 calc(3vw + 3rem);
     }
 
