_footer.scss: changed

--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -57,6 +57,7 @@
   @media only screen and (min-width: 601px) {
     &__inside {
       display: grid;
+      grid-template-columns: 1fr 1fr;
       margin: 0 calc(3vw + 3rem);
     }
 
