_footer.scss: changed

--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -46,7 +46,7 @@
 
     .button {
       font-size: inherit;
-      padding: 0.275em 0.5em 0.275em 0;
+      padding: 0.275em 0.5em;
     }
 
     .icon {
