--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,8 @@
         {% endif %}
         {% assign email_is_not_empty = site.data.config.footer.email | is_not_empty %}
         {% if email_is_not_empty %}
-        <div class="site-footer__email">{{ site.data.config.footer.email }}</div>
+        <div class="site-footer__email">
+            {{ site.data.config.footer.email }}</div>
         {% endif %}
         {% for action in site.data.config.footer.links %}
           
