--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,7 +13,7 @@
         {% assign email_is_not_empty = site.data.config.footer.email | is_not_empty %}
         {% if email_is_not_empty %}
         <div class="site-footer__email">
-            {{ site.data.config.footer.email }}</div>
+           <a href="mailto:kontakt@yoga-mit-shilpa.de">kontakt@yoga-mit-shilpa.de</a> {{ site.data.config.footer.email }}</div>
         {% endif %}
         {% for action in site.data.config.footer.links %}
           
