--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,6 +31,10 @@
         {% if slogan_is_not_empty %}
         <div class="site-footer__slogan">{{ site.data.config.footer.slogan }}</div>
         {% endif %}
+        {% assign slogan_is_not_empty = site.data.config.footer.slogan | is_not_empty %}
+        {% if slogan_is_not_empty %}
+        <div class="site-footer__slogan">{{ site.data.config.footer.slogan }}</div>
+        {% endif %}
       </div>
       {% endif %}
     </div>
