--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,7 +27,7 @@
           
           {% include action.html action=action %}
         {% endfor %}
-        {% assign link_is_not_empty = site.data.config.footer.slogan | is_not_empty %}
+        {% assign link_is_not_empty = site.data.config.footer.link | is_not_empty %}
         {% if slogan_is_not_empty %}
         <div class="site-footer__slogan">{{ site.data.config.footer.slogan }}</div>
         {% endif %}
