--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -28,7 +28,7 @@
           {% include action.html action=action %}
         {% endfor %}
         {% assign link_is_not_empty = site.data.config.footer.link | is_not_empty %}
-        {% if _is_not_empty %}
+        {% if link_is_not_empty %}
         <div class="site-footer__slogan">{{ site.data.config.footer.slogan }}</div>
         {% endif %}
         {% assign slogan_is_not_empty = site.data.config.footer.slogan | is_not_empty %}
