--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -30,7 +30,9 @@
         {% assign link_is_not_empty = site.data.config.footer.link | is_not_empty %}
         {% if link_is_not_empty %}
         <div class="site-footer__link">
-            {{ site.data.config.footer.link }}</div>
+            <a href="http://yoga-mit-shilpa.de/impressum">
+    Impressum
+    </a>{{ site.data.config.footer.link }}</div>
         {% endif %}
         {% assign slogan_is_not_empty = site.data.config.footer.slogan | is_not_empty %}
         {% if slogan_is_not_empty %}
