footer.html: changed

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -32,7 +32,7 @@
         <div class="site-footer__link">
             <a href="http://yoga-mit-shilpa.de/impressum">
     Impressum
-    </a>{{ site.data.config.footer.link }}</div>
+    </a></div>
         {% endif %}
         {% assign slogan_is_not_empty = site.data.config.footer.slogan | is_not_empty %}
         {% if slogan_is_not_empty %}
