--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -30,8 +30,7 @@
         {% assign link_is_not_empty = site.data.config.footer.link | is_not_empty %}
         {% if link_is_not_empty %}
         <div class="site-footer__link">
-            <a href="http://yoga-mit-shilpa.de/impressum">
-    {{ site.data.config.footer.link }}
+            <a href="http://yoga-mit-shilpa.de/impressum">{{ site.data.config.footer.link }}
     </a></div>
         {% endif %}
         {% assign slogan_is_not_empty = site.data.config.footer.slogan | is_not_empty %}
