_footer.scss: changed

--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -50,7 +50,7 @@
   }
   &__link {
     a {
-      margin: 0 20px 0.25em 0;
+      text-transform: capitalize;
     }
 
   @media only screen and (min-width: 601px) {
