--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -8,7 +8,7 @@
 
   a {
     &:not(.button) {
-      border-bottom: 1px solid rgba($color-gray-600, .4);
+      border-bottom: 1px solid #fff;
       -webkit-transition: opacity .3s;
       transition: opacity .3s;
 
