_footer.scss: changed

--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -1,6 +1,11 @@
 .site-footer {
   padding: 2rem 0 1.5rem 0;
-  background: #ed9700;
+  background: #footer {
+    font-size: 16px;
+    height: 200px;
+    bottom: 0;
+    background-color: #f0790d;
+};
   position: absolute;
   bottom: 0;
   width: 100%;
