header.html: changed

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,6 +14,7 @@
     <div id="breathe">Breathe... and smile!</div>
   </div>
 </header>
+  <div id="words"></div>
 <div id="top">
   <nav class="navbar" aria-label="Main Navigation">   
     {% assign has_nav_is_not_empty = site.data.config.header.has_nav | is_not_empty %}
