_header.scss: changed

--- a/_sass/imports/_header.scss
+++ b/_sass/imports/_header.scss
@@ -50,7 +50,7 @@
 }
 
 .navbar {
-  padding: 1.5rem 0;
+  padding: 1.6rem;
   -ms-flex-align: center;
   align-items: center;
   display: -ms-flexbox;
