--- a/_sass/imports/_variations.scss
+++ b/_sass/imports/_variations.scss
@@ -1,6 +1,6 @@
 // Alternative palettes and accent colors
 .palette-dark {
-  background: $color-gray-900;1.5em
+  background: $color-gray-900;
   color: $color-gray-100;
 
   hr,
