--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,7 @@
     </div>
     {% endif %}
     <div><img src="{{ site.data.config.header.branding | relative_url }}" alt="{{ site.data.config.header.branding_alt }}" /></div>
-    <div id="breathe">{{ site.data.config.header.title }}</div>
+    <div id="breathe">{{ site.data.config.header.leitspruch }}</div>
   </div>
 </header>
   <div id="words"></div>
