--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,8 @@
     </div>
     {% endif %}
     <div><img src="{{ site.data.config.header.branding | relative_url }}" alt="{{ site.data.config.header.branding_alt }}" /></div>
-    
+    {% assign logo_is_not_empty = site.data.config.header.logo | is_not_empty %}
+    {% if logo_is_not_empty %}
     <div id="breathe">{{ site.data.config.header.leitspruch }}</div>
   </div>
 </header>
