header.html: changed

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,7 @@
     </div>
     {% endif %}
     <div><img src="{{ site.data.config.header.branding | relative_url }}" alt="{{ site.data.config.header.branding_alt }}" /></div>
-    {% assign leitspruch_is_not_empty = site.data.config.header.logo | is_not_empty %}
+    {% assign leitspruch_is_not_empty = site.data.config.header.leitspruch | is_not_empty %}
     {% if logo_is_not_empty %}
     <div id="breathe">{{ site.data.config.header.leitspruch }}</div>
   </div>
