--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
     {% endif %}
     <div><img src="{{ site.data.config.header.branding | relative_url }}" alt="{{ site.data.config.header.branding_alt }}" /></div>
     {% assign leitspruch_is_not_empty = site.data.config.header.leitspruch | is_not_empty %}
-    {% if logo_is_not_empty %}
+    {% if leitspruch_is_not_empty %}
     <div id="breathe">{{ site.data.config.header.leitspruch }}</div>
   </div>
 </header>
