--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,6 +14,7 @@
     {% assign leitspruch_is_not_empty = site.data.config.header.leitspruch | is_not_empty %}
     {% if leitspruch_is_not_empty %}
     <div id="breathe">{{ site.data.config.header.leitspruch }}</div>
+    % endif %}
   </div>
 </header>
   <div id="words"></div>
