_header.scss: changed

--- a/_sass/imports/_header.scss
+++ b/_sass/imports/_header.scss
@@ -132,7 +132,8 @@
     }
 
     &__item:first-child {
-                
+        width: 2em;
+        height: 2em;        
     }
 
     .button--primary {
