--- a/_sass/imports/_header.scss
+++ b/_sass/imports/_header.scss
@@ -134,7 +134,7 @@
     &__item:first-child > a > .icon {
         width: 2em;
         height: 2em;  
-        content:att      
+        content:attr()      
     }
 
     .button--primary {
