icon.html: changed

--- a/_includes/icon.html
+++ b/_includes/icon.html
@@ -18,6 +18,7 @@
   </svg>
   {% assign lotos = include.icon %}
   {% if lotos == 'lotos' %}
+  <svg class="icon" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"></svg>
   <path d="M 17.00,6.00
            C 17.00,6.00 19.00,6.00 19.00,6.00
              19.00,6.00 20.00,10.00 20.00,10.00
