icon.html: changed

--- a/_includes/icon.html
+++ b/_includes/icon.html
@@ -55,10 +55,10 @@
              8.80,22.88 9.75,23.35 13.00,21.00 Z
            M 30.00,22.00
            C 30.00,22.00 23.00,21.00 23.00,21.00
-             23.00,21.00 23.00,23.00 23.00,23.00
+             23.00,21.00 23.00,23.00 23.00,2</svg>3.00
              23.00,23.00 30.00,22.00 30.00,22.00 Z
            M 15.00,22.00
            C 15.06,25.87 19.01,28.06 21.00,22.00
              21.00,22.00 15.00,22.00 15.00,22.00 Z" />
   {% endif %}
-
+</svg>
