--- a/_sass/imports/_header.scss
+++ b/_sass/imports/_header.scss
@@ -257,7 +257,9 @@
       text-align: center;
   }
 
-  #logoimg {}
+  #logoimg {
+      margin-top: 4rem;
+  }
 }
 
 @media only screen and (max-width: 480px) {
