--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,7 +18,7 @@
   </div>
 </header>
   <div id="words">
-      
+      img
   </div>
 <div id="top">
   <nav class="navbar" aria-label="Main Navigation">   
