--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,7 +18,7 @@
   </div>
 </header>
   <div id="words">
-      <img id="wolke" />
+      <img id="wolke" src="" />
   </div>
 <div id="top">
   <nav class="navbar" aria-label="Main Navigation">   
