header.html: changed

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,7 +18,7 @@
   </div>
 </header>
   <div id="words">
-      <img id="wolke" src="{{ site.data.config.header.branding | relative_url }}" alt=" {{ site.data.config.header.woke_alt }}" />
+      <img id="wolke" src="{{ site.data.config.header.branding | relative_url }}" alt=" {{ site.data.config.header.wolke_alt }}" />
   </div>
 <div id="top">
   <nav class="navbar" aria-label="Main Navigation">   
