_header.scss: changed

--- a/_sass/imports/_header.scss
+++ b/_sass/imports/_header.scss
@@ -39,7 +39,7 @@
   padding-top: 91px;
 }
 
-#words {
+#wolke {
     background-image: url(/images/words.png);
     background-position: center;
     background-repeat: no-repeat;
