--- a/_sass/imports/_header.scss
+++ b/_sass/imports/_header.scss
@@ -224,9 +224,7 @@
   #navbar {
     &__open {
       display: block;
-      margin-left: auto;
-      margin-top: -2rem;
-      margin-right: 1rem;
+          margin: -1rem auto 0 auto;
     }
 
     &__close {
