_header.scss: changed

--- a/_sass/imports/_header.scss
+++ b/_sass/imports/_header.scss
@@ -144,6 +144,10 @@
       padding: 0.275em 0.5em;
     }
   }
+
+  #wolke {
+    height: 154px;
+
   #deco {
     background-image: url(../images/deco.png);
     background-repeat: no-repeat;
