_header.scss: changed

--- a/_sass/imports/_header.scss
+++ b/_sass/imports/_header.scss
@@ -233,7 +233,7 @@
   #navbar {
     &__open {
       display: block;
-      margin: -1.5rem auto 0 auto;
+      margin: 0 auto;
     }
 
     &__close {
