_header.scss: changed

--- a/_sass/imports/_header.scss
+++ b/_sass/imports/_header.scss
@@ -233,6 +233,9 @@
   #navbar {
     &__open {
       display: block;
+      position: absolute;
+      top: 1rem;
+      right: 1rem;
       margin: 0 auto;
     }
 
