--- a/_sass/imports/_header.scss
+++ b/_sass/imports/_header.scss
@@ -275,6 +275,10 @@
       display: none;
       margin-top: 5rem;
   }
+
+  #words {
+      display: none;
+  }
 }
 
 @media only screen and (max-width: 480px) {
