--- a/_sass/imports/_header.scss
+++ b/_sass/imports/_header.scss
@@ -272,7 +272,9 @@
   }
 
   #logoimg {
-      margin-top: 5rem;
+          position: absolute;
+    top: 160px;
+    left: calc(50vw - 46px);
   }
 
   #words {
