--- a/_sass/imports/_header.scss
+++ b/_sass/imports/_header.scss
@@ -151,7 +151,10 @@
     height: 154px;
   }
 
-  #top 
+  #top {
+  margin-top: -91px;
+  padding-top: 91px;
+  }
 
   #deco {
     background-image: url(../images/deco.png);
