_hero.scss: changed

--- a/_sass/imports/_hero.scss
+++ b/_sass/imports/_hero.scss
@@ -9,11 +9,7 @@
   }
 
   &__body {
-    font-size: 1.1111word-wrap: break-word;
-    text-align: justify;
-    -webkit-hyphens: auto;
-    -ms-hyphens: auto;
-    hyphens: auto;1em;
+    font-size: 1.11111em;
     line-height: 1.5;
   }
 
