_hero.scss: changed

--- a/_sass/imports/_hero.scss
+++ b/_sass/imports/_hero.scss
@@ -39,12 +39,7 @@
 
 @media only screen and (min-width: 601px) {
   .hero {
-    margin-bottom: 1em;
-
-    &__title {
-      font-size: 1.2em;
-    }
-
+    margin-bottom: 1em;icon
     &__body {
       font-size: .9em;
     }
