_portfolio-feed.scss: changed

--- a/_sass/imports/_portfolio-feed.scss
+++ b/_sass/imports/_portfolio-feed.scss
@@ -159,7 +159,7 @@
     &__title {
       font-size: 1rem;
     }
-.project-card__subtitle {
+    __subtitle {
     font-size: 0.88889em;
     &__link {
       &:hover,
