_portfolio-feed.scss: changed

--- a/_sass/imports/_portfolio-feed.scss
+++ b/_sass/imports/_portfolio-feed.scss
@@ -161,8 +161,8 @@
     }
 
     &__subtitle {
-    font-size: 0.88889em;
-    
+      font-size: 0.88889em;
+    }
     
     &__link {
       &:hover,
