--- a/css/main.scss
+++ b/css/main.scss
@@ -52,7 +52,7 @@ $grid-gap: 1.66667rem !default;
 @import "imports/structure";
 @import "imports/header";
 @import "imports/post";
-@import "imports/post-feed";@media only screen and (min-width: 601px) {
+@import "imports/post-feed";
 @import "imports/portfolio-feed";
 @import "imports/project";
 @import "imports/hero";
