--- a/css/main.scss
+++ b/css/main.scss
@@ -37,6 +37,7 @@ $container-md: 780px !default;
 // Container padding
 $container-padding: 3vw !default;
 
+@media only screen and (min-width: 601px) {
 // Grid gap
 $grid-gap: 1.66667rem !default;
 
