main.scss: changed

--- a/css/main.scss
+++ b/css/main.scss
@@ -38,6 +38,8 @@ $container-md: 780px !default;
 $container-padding: 3vw !default;
 
 @media only screen and (min-width: 601px) {
+    
+}
 // Grid gap
 $grid-gap: 1.66667rem !default;
 
