--- a/css/main.scss
+++ b/css/main.scss
@@ -38,7 +38,7 @@ $container-md: 780px !default;
 $container-padding: 3vw !default;
 
 @media only screen and (min-width: 601px) {
-    $container-padding: 5vw 
+    $container-padding: 5vw !default;
 }
 // Grid gap
 $grid-gap: 1.66667rem !default;
