--- a/css/main.scss
+++ b/css/main.scss
@@ -37,7 +37,7 @@ $container-md: 780px !default;
 // Container padding
 $container-padding: 3vw !default;
 
-@media only screen and (min-width: 601px) {
+@media only screen and (max-width: 601px) {
     $container-padding: 5vw !default;
 }
 
