--- a/_sass/imports/_structure.scss
+++ b/_sass/imports/_structure.scss
@@ -15,6 +15,8 @@
   flex-grow: 1;
   width: 100%;
   background-image: url(/images/bg-sides.png);
+  
+        padding: 0 3rem;
   padding-bottom: 1rem;
 }
 
