--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -73,6 +73,6 @@
 
   @media only screen and (min-width: 601px) {
     .site-footer {
-        padding: 2rem 0 1.5rem 0;
+        padding: 2rem  1.5rem 0;
     }
   }
