_footer.scss: changed

--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -1,5 +1,5 @@
 .site-footer {
-        padding: 2rem 1.5rem 1.5rem 1.5rem  
+        padding: 2rem 1.5rem 1.5rem 1.5rem;  
   background: #f0790d;
   position: absolute;
   bottom: 0;
