footer.html: changed

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,7 +13,7 @@
         {% assign email_is_not_empty = site.data.config.footer.email | is_not_empty %}
         {% if email_is_not_empty %}
         <div class="site-footer__email">
-           
+           <img src=""
            <a href="mailto:{{ site.data.config.footer.email }}">{{ site.data.config.footer.email }}</a></div>
         {% endif %}
         {% for action in site.data.config.footer.links %}
