--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -54,6 +54,10 @@
     }
 }
 
+ .filter-green{
+        filter: invert(48%) sepia(79%) saturate(2476%) hue-rotate(86deg) brightness(118%) contrast(119%);
+    }
+
   @media only screen and (min-width: 601px) {
     &__inside {
       display: grid;
