footer.html: changed

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
         {% assign phone_is_not_empty = site.data.config.footer.phone | is_not_empty %}
         {% if phone_is_not_empty %}
         <div class="site-footer__phone">
-            <img src="/images/phone.svg{{ site.data.config.footer.phone }}</div>
+            <img src="/images/phone.svg" class="{{ site.data.config.footer.phone }}</div>
         {% endif %}
         {% assign email_is_not_empty = site.data.config.footer.email | is_not_empty %}
         {% if email_is_not_empty %}
