--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -54,7 +54,10 @@
     }
 }
 
- .light-filter{
+ .light-filter{    margin-top: -.25rem;
+    height: 20px;
+    width: 20px;
+}
         filter: invert(68%) sepia(49%) saturate(397%) hue-rotate(67deg) brightness(95%) contrast(90%);
     }
 
