--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -54,7 +54,8 @@
     }
 }
 
- .light-filter{    margin-top: -.25rem;
+ .light-filter{    
+     margin-top: -.25rem;
     height: 20px;
     width: 20px;
 }
