_header.scss: changed

--- a/_sass/imports/_header.scss
+++ b/_sass/imports/_header.scss
@@ -134,6 +134,7 @@
     }
 
     &__item:first-child > a > .icon {
+        margin-left: -30px;
         width: 2em;
         height: 2em;            
     }
