_header.scss: changed

--- a/_sass/imports/_header.scss
+++ b/_sass/imports/_header.scss
@@ -131,6 +131,7 @@
       color: #555;
       line-height: 1.2;
       margin: 0 .75em;
+      margin-bottom: -5px;
     }
 
     &__item:first-child > a > .icon {
