--- a/_sass/imports/_header.scss
+++ b/_sass/imports/_header.scss
@@ -265,13 +265,7 @@
 
     .button {
       font-size: 1.11111em;
-      margin:
-      
-          &__item:first-child > a > .icon {
-        margin-left: -19px;
-        width: 2em;
-        height: 2em;            
-    }1em 0;
+      margin: 1em 0;
     }
   }
 
