_header.scss: changed

--- a/_sass/imports/_header.scss
+++ b/_sass/imports/_header.scss
@@ -267,6 +267,11 @@
       font-size: 1.11111em;
       margin: 1em 0;
     }
+        &__item:first-child > a > .icon {
+        margin-left: -19px;
+        width: 2em;
+        height: 2em;            
+    }
   }
 
   #breathe {
