_header.scss: changed

--- a/_sass/imports/_header.scss
+++ b/_sass/imports/_header.scss
@@ -270,7 +270,8 @@
     &__item:first-child > a > .icon {
       margin-left: -19px;
       width: 3em;
-      height: 3em;            
+      height: 3em;   
+      margin-bottom: -1rem;         
     }
   }
 
