icon.html: changed

--- a/_includes/icon.html
+++ b/_includes/icon.html
@@ -18,7 +18,7 @@
   </svg>
   {% assign lotos = include.icon %}
   {% if lotos == 'lotos' %}
-  <svg class="" viewBox="0 0 36 36" xmlns="http://www.w3.org/2000/svg">
+  <svg class="icon" viewBox="0 0 36 36" xmlns="http://www.w3.org/2000/svg">
   <path d="M 17.00,6.00
            C 17.00,6.00 19.00,6.00 19.00,6.00
              19.00,6.00 20.00,10.00 20.00,10.00
