--- a/_includes/icon.html
+++ b/_includes/icon.html
@@ -17,7 +17,7 @@
   {% endif %}
   </svg>
   {% assign lotos = include.icon %}
-  {% if lotos == 'lotos' %}
+  {% if icon == 'lotos' %}
   <svg class="icon" viewBox="0 0 36 36" xmlns="http://www.w3.org/2000/svg">
   <path d="M 17.00,6.00
            C 17.00,6.00 19.00,6.00 19.00,6.00
