_header.scss: changed

--- a/_sass/imports/_header.scss
+++ b/_sass/imports/_header.scss
@@ -270,7 +270,8 @@
     &__item:first-child > a > .icon {
       width: 3em;
       height: 3em;   
-      margin-bottom: -1rem;         
+      margin-bottom: -1rem;    
+      margin-left: -1.75rem;     
     }
   }
 
