--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -77,7 +77,9 @@
   }
 
   @media only screen and (max-width: 767px) {
-      &__info 
+      &__info {
+    padding-left: 1.5rem;
+      }
   }
 }
 
