_footer.scss: changed

--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -80,7 +80,9 @@
       &__info {
         padding-left: 1.5rem;
       }
-      
+      &__copyright {
+          margin-left: 1.5rem;
+      }
   }
 }
 
