--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -81,7 +81,7 @@
         padding-left: 1.5rem;
       }
       &__copyright {
-          margin-left: 1.5rem;
+          margin: 0 10px 0.25em 0;
       }
   }
 }
