--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -77,7 +77,7 @@
   }
 
   @media only screen and (max-width: 767px) {
-      &__info {
+      &__info,  {
         padding-left: 1.5rem;
       }
       
@@ -86,7 +86,7 @@
       }
 
       &__social {
-          
+
       }
   }
 }
