--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -75,7 +75,14 @@
       }
     }
   }
-
-  
 }
 
+@media only screen and (max-width: 767px) {
+      &__info, &__social {
+        padding-left: 1.5rem;
+      }
+      
+      &__copyright {
+        margin: 0 10px 0.25em 1.5rem;
+      }
+  }
