--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -78,6 +78,7 @@
 }
 
 @media only screen and (max-width: 767px) {
+    .site-footer
       &__info, &__social {
         padding-left: 1.5rem;
       }
