--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -83,7 +83,7 @@
         padding-left: 1.5rem;
       }
       
-      &__copyright {
+      &__copyright !important {
         margin: 0 10px 0.25em 1.5rem;
       }
   }
