--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -84,7 +84,7 @@
       }
       
       &__copyright  {
-        margin: 0 10px 0.25em 1.5rem;
+        margin: 0 10px 0.25em 1.5rem !important;
       }
   }
 }
