--- a/_sass/imports/_structure.scss
+++ b/_sass/imports/_structure.scss
@@ -16,7 +16,7 @@
   width: 100%;
   background-image: url(/images/bg-sides.png);
   padding: 0 1.5rem;
-  padding-bottom: 2rem;
+  padding-bottom: rem;
 }
 
 .container {
