--- a/_sass/imports/_structure.scss
+++ b/_sass/imports/_structure.scss
@@ -14,9 +14,7 @@
   -ms-flex-positive: 1;
   flex-grow: 1;
   width: 100%;
-  background-image: url(/images/bg-sides.png);
-  padding: 0 1.5rem;
-  padding-bottom: rem;
+  padding-bottom: 1rem;
 }
 
 .container {
