--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -80,7 +80,7 @@
 @media only screen and (max-width: 767px) {
     .site-footer {
       &__info, &__social {
-        padding-left: 1.6rem;
+        padding: 1.6rem;
       }
   }
 }
