_footer.scss: changed

--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -82,6 +82,9 @@
       &__info, &__social {
         padding: 0 1.6rem;
       }
-      
+      &__slogan {
+              text-align: right;
+    margin-top: 1.5rem;
+      }
   }
 }
