--- a/_sass/imports/_structure.scss
+++ b/_sass/imports/_structure.scss
@@ -14,7 +14,7 @@
   -ms-flex-positive: 1;
   flex-grow: 1;
   width: 100%;
-  padding: 0 1.5rem 
+  padding: 0 1.5rem 4rem 0;
   padding-bottom: 4rem;
 }
 
