--- a/_sass/imports/_portfolio-feed.scss
+++ b/_sass/imports/_portfolio-feed.scss
@@ -17,8 +17,7 @@
   &__title {
     font-size: 2rem;
     margin: 0;
-    color: #      background-color: #74c86c;
-;
+    color: #fff;
     font-family: Chicle, cursive;
     letter-spacing: 1px;
 
