--- a/_sass/imports/_portfolio-feed.scss
+++ b/_sass/imports/_portfolio-feed.scss
@@ -31,7 +31,7 @@
     font-size: 1.5em;
     line-height: 1.5;
     margin-top: 0.3125em;
-    color: #fff;
+    color: #74c86c;
     font-family: Chicle, cursive;
     letter-spacing: 1px;
   }
