--- a/css/main.scss
+++ b/css/main.scss
@@ -11,7 +11,8 @@ $fonts: (
 // Colors
 $color-gray-50:  #f6f7f9 !default;
 $color-gray-100: #e5e7eb !default;
-$color-gray-200: #d1d5db !default;
+$color-gray-200: #
+d1d5db !default;
 $color-gray-300: #868f9d !default;
 $color-gray-400: #6b7280 !default;
 $color-gray-500: #4b5563 !default;
