revert thead css change

--- a/_sass/imports/_variations.scss
+++ b/_sass/imports/_variations.scss
@@ -23,7 +23,13 @@
   h1,
   h2,
   h3,
-  h4,
+  h4,​
+36
+  thead {
+37
+      border-bottom-color: #000; 
+38
+  }
   h5,
   h6,
   th,
@@ -31,10 +37,6 @@
   blockquote,
   .navbar__title {
     color: #fff;
-  }
-
-  thead {
-      border-bottom-color: #000; 
   }
 
   .text-block pre,
