--- a/_sass/imports/_variations.scss
+++ b/_sass/imports/_variations.scss
@@ -34,6 +34,10 @@
     border-bottom: 1px solid #000000;
   }
 
+  td p {
+      margin: 0;
+  }
+
   .text-block pre,
   .section__bg,
   .section--form form {
