_variations.scss: changed

--- a/_sass/imports/_variations.scss
+++ b/_sass/imports/_variations.scss
@@ -38,7 +38,7 @@
 
   .button--icon,
   figcaption,
-  caption,
+  caption,.line-top:before
   .card__subtitle,
   .testimonial__position,
   .post__subtitle,
