_post.scss: changed

--- a/_sass/imports/_post.scss
+++ b/_sass/imports/_post.scss
@@ -32,7 +32,9 @@
     margin-bottom: 1.5em;
     margin-top: 2.5em;
   }
-  
+  &__body h3 {
+      color: 74c86c
+  }
 }
 
 @media only screen and (min-width: 601px) {
