--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -78,7 +78,7 @@
 }
 
 @media only screen and (max-width: 767px) {
-    
+    padding: 2rem 0 1.5rem 0;  
     .site-footer {
       &__info, &__social {
         padding: 0 1.6rem;
