--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -65,7 +65,7 @@
     &__inside {
       display: grid;
       grid-template-columns: 1fr 1fr;
-      margin: 0 calc(3vw + 1.5rem);
+      margin: 0 3vw;
     }
 
     &__social {
