_project.scss: changed

--- a/_sass/imports/_project.scss
+++ b/_sass/imports/_project.scss
@@ -19,6 +19,8 @@
 
 @media only screen and (min-width: 601px) {
   .project {
+    margin-top: 5rem;
+    
     &__header {
       margin-bottom: 2.5em;
     }
