post.html: changed

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -44,7 +44,7 @@ layout: body
     {% if post_index_length > 0 %}
     <nav class="section section--posts">
       <div class="container container--lg">
-        <h2 class="section__title line-top">Read Next</h2>
+        <h2 class="section__title line-top">Weiterlesen</h2>
         <div class="grid post-feed post-feed--col-two">
           {% if curr_index != 0 %}
             {% assign prev_post = posts_sorted[prev_index] %}
