project.html: changed

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -33,7 +33,7 @@ layout: body
     {% if project_index_length > 0 %}
     <nav class="section section--portfolio">
       <div class="container container--lg">
-        <h2 class="section__title line-top">More Projects</h2>
+        <h2 class="section__title line-top">Übersicht</h2>
         <div class="grid portfolio-feed portfolio-feed--tiles">
           {% if curr_index != 0 %}
             {% assign prev_project = projects_sorted[prev_index] %}
