--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -21,6 +21,11 @@ layout: body
         {% include {{ component }} section=section site=site %}
       {% endfor %}
   </div>
+  <div class="post__body text-block">
+    <div class="container container--md">
+      {{ content }}
+    </div>
+  </div>
 </article>
 
 {% assign projects_sorted = '/portfolio' | get_pages | sort: 'date' | reverse %}
