--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -23,6 +23,7 @@ layout: body
   </div>
   <div class="post__body text-block">
     <div class="container container--md">
+        {% for section in page.sections %}
       {{ content }}
     </div>
     <p>Hallo</p>
