--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -24,8 +24,9 @@ layout: body
   <div class="post__body text-block">
     <div class="container container--md">
         {% for section in page.sections %}
-        
+
       {{ content }}
+      {% endfor %}
     </div>
     <p>Hallo</p>
   </div>
