--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -25,7 +25,7 @@ layout: body
     <div class="container container--md">
         {% for section in page.sections %}
 
-      {}
+      {% include }
       {% endfor %}
     </div>
   </div>
