project.html: changed

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -24,7 +24,7 @@ layout: body
   <div class="post__body text-block">
     <div class="container container--md">
         {% for section in page.sections %}
-          {% assign table}
+          {% assign table =}
       {% endfor %}
     </div>
   </div>
