--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -26,7 +26,7 @@ layout: body
         {% for section in page.sections %}
          
           {% assign table = section.table %}
-          {}
+          {% if table}
           {% include {{ table }} section=sectin site=site %}
       {% endfor %}
     </div>
