--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -28,7 +28,7 @@ layout: body
           {% assign table = section.table %}
           {% if table %}
           {% include {{ table }} section=sectin site=site %}
-          
+          {% endif }
       {% endfor %}
     </div>
   </div>
