project.html: changed

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -23,7 +23,7 @@ layout: body
   </div>
   <div class="post__body text-block">
     <div class="container container--md">
-       
+       {{ content }}
     </div>
   </div>
 </article>
