_section.scss: changed

--- a/_sass/imports/_section.scss
+++ b/_sass/imports/_section.scss
@@ -44,7 +44,9 @@
     }
   }
 
-  &__body id="evangelische-familienbildungsstätte" {}
+  &__body id="evangelische-familienbildungsstätte" {
+      
+  }
 
   .grid {
     &:not(:first-child) {
