_section.scss: changed

--- a/_sass/imports/_section.scss
+++ b/_sass/imports/_section.scss
@@ -44,8 +44,8 @@
     }
   }
 
-  &__body id="evangelische-familienbildungsstätte" {
-      
+  &__body h3.id="evangelische-familienbildungsstätte" {
+
   }
 
   .grid {
