_section.scss: changed

--- a/_sass/imports/_section.scss
+++ b/_sass/imports/_section.scss
@@ -44,7 +44,7 @@
     }
   }
 
-  &__body h3.id="evangelische-familienbildungsstätte" {
+  &__body h3.evangelische-familienbildungsstätte" {
 
   }
 
