_structure.scss: changed

--- a/_sass/imports/_structure.scss
+++ b/_sass/imports/_structure.scss
@@ -22,6 +22,10 @@
   padding-right: $container-padding;
 }
 
+.container h2 {
+    h2:first-child
+}
+
 .container--lg {
   margin-left: auto;
   margin-right: auto;
