_structure.scss: changed

--- a/_sass/imports/_structure.scss
+++ b/_sass/imports/_structure.scss
@@ -25,12 +25,9 @@
 .container--lg {
   margin-left: auto;
   margin-right: auto;
-  max-width: $container-lg;
-}
-
-.container--md {
-  margin-left: auto;
-  margin-right: auto;
+  max-wid.container h1:first-child {
+    margin-top: 5rem;
+}right: auto;
   max-width: $container-md;
 }
 
