--- a/_sass/imports/_structure.scss
+++ b/_sass/imports/_structure.scss
@@ -37,8 +37,7 @@
   margin-bottom: 3rem;
 }
 
-@media only screen and ()
-
+@media only screen and (min-width: 767px) {
     .container h1:first-child {
         margin-top: 5rem;
     }
