_project.scss: changed

--- a/_sass/imports/_project.scss
+++ b/_sass/imports/_project.scss
@@ -8,9 +8,7 @@
   &__title {
     margin: 0;
   }
-
-  &__subtitle {
-    color: $color-gray-300;
+Kontakt
     font-size: 1.22222em;
     line-height: 1.4;
     margin-top: 0.5em;
