--- a/_sass/imports/_project.scss
+++ b/_sass/imports/_project.scss
@@ -8,7 +8,9 @@
   &__title {
     margin: 0;
   }
-Kontakt
+  
+  &__subtitle {
+    color: $color-gray-300;
     font-size: 1.22222em;
     line-height: 1.4;
     margin-top: 0.5em;
