post.html: changed

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,7 +29,7 @@ layout: body
   </div>
   <footer class="post__meta">
     <div class="container container--md">
-      Veröffentlicht am <time class="published" datetime="{{ page.date | date: '%Y-%m-%d %H:%M' }}">{{ page.date | date: '%B %d %Y' }}</time>
+      Veröffentlicht am <time class="published" datetime="{{ page.date | date: '%Y-%m-%d %H:%M' }}">{{ page.date | date: '%B %d. %Y' }}</time>
     </div>
   </footer>
 </article>
