_structure.scss: changed

--- a/_sass/imports/_structure.scss
+++ b/_sass/imports/_structure.scss
@@ -23,8 +23,8 @@
 }
 
 .container--lg {
-  margin-left: auto;
-  margin-right: auto;
+    margin-left: 3rem;
+    margin-right: 3rem;
   max-wid.container h1:first-child {
     margin-top: 5rem;
 }right: auto;
