_post.scss: changed

--- a/_sass/imports/_post.scss
+++ b/_sass/imports/_post.scss
@@ -40,6 +40,8 @@
 @media only screen and (min-width: 601px) {
   .post {
     margin-top: 5rem;
+        margin-left: 3rem;
+    margin-right: 3rem;
 
     &__header,
     &__image {
