_structure.scss: changed

--- a/_sass/imports/_structure.scss
+++ b/_sass/imports/_structure.scss
@@ -25,7 +25,9 @@
 .container--lg {
   margin-left: 3rem;
   margin-right: 3rem;
-  max-wid.container h1:first-child {
+  max-wid
+  
+  .container h1:first-child {
     margin-top: 5rem;
 }right: auto;
   max-width: $container-md;
