_project.scss: changed

--- a/_sass/imports/_project.scss
+++ b/_sass/imports/_project.scss
@@ -23,7 +23,7 @@
 
 @media only screen and (min-width: 601px) {
   .project {
-    margin: 5rem 3rem 3rem;
+    margin: 5rem 3rem 0 3rem;
     
     &__header {
       margin-bottom: 2.5em;
