_footer.scss: changed

--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -6,7 +6,9 @@
   width: 100%;
   left: 0;
 
-  
+  .container--lg {
+      margin: 0 auto;
+  }
   a {
     &:not(.button) {
       border-bottom: 1px solid #fff;
