_post.scss: changed

--- a/_sass/imports/_post.scss
+++ b/_sass/imports/_post.scss
@@ -51,6 +51,10 @@
     &__header,
     &__image {
       margin-bottom: 2.5em;
+
+      img {
+          margin-left: 1.5rem;
+      }
     }
 
     &__subtitle {
