_post.scss: changed

--- a/_sass/imports/_post.scss
+++ b/_sass/imports/_post.scss
@@ -48,7 +48,7 @@
   .post {
     margin-top: 5rem;
     margin-left: 3vw;
-    margin-right: 3vw;
+    margin-right: 3;
 
     &__header,
     &__image {
