_post.scss: changed

--- a/_sass/imports/_post.scss
+++ b/_sass/imports/_post.scss
@@ -57,6 +57,7 @@
       img {
           margin-left: 3vw;
           margin-right: 3vw;
+              max-width: calc(780px - 6vw);
       }
     }
 
