_footer.scss: changed

--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -3,7 +3,7 @@
   background: #f0790d;
   position: absolute;
   bottom: 0;
-  width: calc(100% - 3rem);
+  width: calc(100% - 3vw);
   left: 0;
 
   .container--lg {
