_footer.scss: changed

--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -68,7 +68,7 @@
     &__inside {
       display: grid;
       grid-template-columns: 1fr 1fr;
-      margin-left: rem;
+      margin-left: 3rem;
       margin-right: 1.5rem;
     }
 
