_footer.scss: changed

--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -64,7 +64,7 @@
         width: 20px;
         filter: invert(86%) sepia(37%) saturate(1485%) hue-rotate(323deg) brightness(104%) contrast(101%);
     }
-
+}
 
   @media only screen and (min-width: 601px) {
     &__inside {
