_footer.scss: changed

--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -104,7 +104,8 @@
   }
 
 @media only screen and (max-width: 767px) {  
-      &__slogan {
+  .site-footer {
+    &__slogan {
         margin-top: 1rem;
       }
   }
