_footer.scss: changed

--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -109,8 +109,9 @@
         margin-top: 1rem;
       }
   }
+}
 
-  @media only screen and (max-width: 998px) {  
+@media only screen and (max-width: 998px) {  
       .site-footer {
         padding: 2rem 0 1.5rem 0;
         width: 100%;
