_post.scss: changed

--- a/_sass/imports/_post.scss
+++ b/_sass/imports/_post.scss
@@ -48,7 +48,7 @@
 @media only screen and (min-width: 601px) {
   .post {
     margin-top: 5rem;
-    
+
     margin-right: 3rem;
 
     &__header,
@@ -71,6 +71,8 @@
     .post {
         &__image {
             img {
+                
+    margin-left: 3rem;
               max-width: 660px;
             }
         }
