_post.scss: changed

--- a/_sass/imports/_post.scss
+++ b/_sass/imports/_post.scss
@@ -72,6 +72,7 @@
         &__image {
             img {
               max-width: 660px;
+              margin-left: 3vw
             }
         }
     }
