_footer.scss: changed

--- a/_sass/imports/_footer.scss
+++ b/_sass/imports/_footer.scss
@@ -107,7 +107,7 @@
 @media only screen and (min-width: 998px) {
   .site-footer {
       &__inside {
-          margin-left: calc(3rem + 3vw)
+          margin-left: calc(3rem + 3vw);
       }
   }
 }
