_portfolio-feed.scss: changed

--- a/_sass/imports/_portfolio-feed.scss
+++ b/_sass/imports/_portfolio-feed.scss
@@ -185,7 +185,7 @@
 }
 
 @media only screen and (max-width: 767px) {
-    .hero .container--lg {
+    .section--portfolio .container--lg {
         margin: 0;
     }
 }
