_section.scss: changed

--- a/_sass/imports/_section.scss
+++ b/_sass/imports/_section.scss
@@ -162,5 +162,7 @@
 }
 
 @media only screen and (max-width: 768px) {
-    .section
+    .section--header .container--lg {
+        margin: 0;
+    }
 }
